--- a/app/src/main/res/layout/activity_music_detail.xml
+++ b/app/src/main/res/layout/activity_music_detail.xml
@@ -22,7 +22,7 @@
         android:id="@+id/btn_play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="62dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="106dp"
         android:text="Play"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="26dp"
-        android:layout_marginTop="122dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="27dp"
         android:text="TextView"
         app:layout_constraintEnd_toStartOf="@+id/btn_stop"
@@ -44,9 +44,19 @@
         android:id="@+id/btn_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="106dp"
-        android:layout_marginEnd="62dp"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="36dp"
         android:text="Stop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detailMusicTitle" />
+
+    <Button
+        android:id="@+id/btn_pause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="21dp"
+        android:text="Pause"
+        app:layout_constraintEnd_toStartOf="@+id/btn_stop"
+        app:layout_constraintStart_toEndOf="@+id/btn_play"
+        app:layout_constraintTop_toBottomOf="@+id/detailMusicDuration" />
 </androidx.constraintlayout.widget.ConstraintLayout>
